--- a/index.html
+++ b/index.html
@@ -264,14 +264,16 @@
 
     </div>
 
-    <div class="footer-credits">
-        Made with <span style="color:red">♥</span> by <a
-            href="https://github.com/vikram-sharma1">Vikram Sharma</a>
-    </div>
-    <br>
-    <div class="footer-credits" id="font">
-        copyrights <span style="color:red"></span> from <a
-            href="https://github.com/ishandeveloper">ishandeveloper</a>
+    <div id="copyright">
+        <div class="footer-credits">
+            Made with <span style="color:red">♥</span> by <a
+                href="https://github.com/vikram-sharma1">Vikram Sharma</a>
+        </div>
+        <br>
+        <div class="footer-credits" id="font">
+            copyrights <span style="color:red"></span> from <a
+                href="https://github.com/ishandeveloper">ishandeveloper</a>
+        </div>
     </div>
 
 
