--- a/index.html
+++ b/index.html
@@ -238,6 +238,10 @@
                 form or write me an email <a target="_blank" href="mailto:thevikramdeveloper@gmail.com"><i
                         class="fas fa-envelope"></i></a>
             </p>
+            <h4>Contact Me :</h4>
+            <h6>+91 8655169123</h6>
+            <h4>Email Me :</h4>
+            <h6>thevikramdeveloper@gmail.com</h6>
             <form class="input-container" method="POST"
                 action="https://formspree.io/f/xknyzzkb">
                 <div class="form-group"><label for="name">Name</label><input type="text" name="name" id="name"
