--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
 
                 <img id="youtube" class="work-card-hero-img" src="./assets/projects/Screenshot (559).png">
                 <h1>Youtube Clone</h1>
-                <p id="details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate cum commodi magni facere quo libero fuga ad dolore omnis saepe.</p>
+                <p id="details">YouTube clone with HTML and CSS
+
+                    Description Built this project to test my knowledge on embedding images and videos in a webpage. Also wanted to see how well my understanding of CSS grid layouts is Also applied some tech of local Storage & fetching of API apply my learning knowledge of that too. Live site</p>
                 <div id="work-text"><h1>Tech-Stack : HTML | CSS | JavaScript</h1></div>
                 <div id="flexing">
                     
