--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div id="work-text"><h1>Tech-Stack : EJS | CSS | JavaScript | MongoDB | NodeJS | Express</h1></div>
                 <div id="flexing">
                     <a href="https://github.com/shuklabhisekh/Backened_Of_Theory_Clone" target="_blank"><button id="btnrepo">Repo</button></a>
-                    <a href="https://theory-clone-backend.herokuapp.com/" target="_blank"><button id="btnrepo">View</button></a>
+                    <a href="https://backend-theory.herokuapp.com/" target="_blank"><button id="btnrepo">View</button></a>
                 </div>
             </div>
 
