--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="work-hero-card">
 
                 <img id="kvoos" class="work-card-hero-img" src="./assets/projects/Screenshot (560).png">
-                <h1>Kvoos.com</h1>
+                <h1>Koovs.com</h1>
                 <p id="details">In this project We have tried to make a look alike clone of Ninewest E-commerce Website. With our efforts and the technology stack, that we have learned till now in Unit-2 in Masai School, we were able to clone the front end and added similar looks and features.</p>
                 <div id="work-text"><h1>Tech-Stack : HTML | CSS | JavaScript</h1></div>
                 <div id="flexing">
